@@ -1,3 +1,12 @@
+2012-10-05 <fmbiete at gmail dot com>
+    BackendIMAP - AES 25
+    * MIME support
+    
+2012-10-05 <fmbiete at gmail dot com>
+    BackendIMAP - AES 12+
+    * Preview always as plain text
+    * Regression: iOS support for MIME
+    
 2012-10-04 <fmbiete at gmail dot com>
     BackendIMAP - AES 12+
     * Receive HTML messages with inlined images
